# mangaplus-notifier-gui

./: .gitignore  .gitmodules  LICENSE  README.md  dune-project
lib/: api.ml  api.mli  cache.ml  cache.mli  data.ml  data.mli  dateformat.ml  dateformat.mli  debug.ml  dune  fs.ml  fs.mli  notifier.ml  prefs.ml  prefs.mli  updater.ml  updater.mli  utils.ml
notifier/: dune  notifier.ml  notifier.mli
proto/: dune  mangaplus.proto  mangaplus_pb.ml  mangaplus_pb.mli  mangaplus_pp.ml  mangaplus_pp.mli  mangaplus_types.ml  mangaplus_types.mli  proto.ml
reverse/: app.c3606a55.js
test/: api_test.ml  dummy2.txt  dune  new_titles_test.ml  titles.cache.test  utils_test.ml
ui/: dune  grid.ml  grid.mli  helper.ml  helper.mli  listview.ml  listview.mli  main.ml  titlewdg.ml  titlewdg.mli  window.ml  window.mli
